# sonic-platform-vpp

./: .gitignore  .gitmodules  CONTRIBUTING.md  FAQ.md  LICENSE  Makefile  README.md  TODO.htm  TODO.md  azure-pipelines.yml  docker-gbsyncd-vpp.dep  docker-gbsyncd-vpp.mk  docker-ptf-sai.dep  docker-ptf.dep  docker-sonic-vpp.dep  docker-sonic-vpp.mk  docker-syncd-vpp.dep  docker-syncd-vpp.mk  dummy_test_file.txt  gbsyncd-vpp.mk  kvm-image.dep  kvm-image.mk  libsaithrift-dev.mk  one-image.dep  one-image.mk  onie.dep  platform-modules-vpp.mk  platform_setup.sh  pr-wrk-diff-may25  raw-image.dep  raw-image.mk  rules.dep  rules.mk  saivpp.dep  saivpp.mk  sonic-gns3a.sh  sonic-version.mk  sonic-vpp-setup.sh  sonic.xml  sonic_multiasic.xml  (+5 more)
.azure-pipelines/: build-template.yml
.github/: copilot-instructions.md
docker-gbsyncd-vpp/: Dockerfile.j2  critical_processes  supervisord.conf
docker-sonic-vpp/: Dockerfile.j2  asic_table.json  buffermgrd.sh  hostname.j2  hwsku.json  manifest.json  orchagent.sh  port_breakout_config_db.json  start.sh  supervisord.conf.j2  zero_profiles.json
docker-sonic-vpp/conf/: constants.yml  init_cfg.json.j2  sai.profile  startup.conf.tmpl  vpp_init.conf  vpp_promisc.conf  vpp_template.json
docker-sonic-vpp/frr/: TS  TSA  TSB  rvtysh  zsocket.sh
docker-syncd-vpp/: Dockerfile-dbg.cleanup  Dockerfile.cleanup  Dockerfile.j2  manifest.json  start.sh  supervisord.conf
dockers/dev_container/: Makefile  (+3 more)
docs/: README.8021q.routing.topo.md  README.LAG.dot1q.bridging.topo.md  README.acl.md  README.bgp.config.md  README.getting-started.md  README.phy.vrf.md  README.simple-topo.loopback.md  README.simple.bgp.md  README.simple.ipv6.md  README.simple.topo.md  README.snmp.md  README.sonic_vm.md  README.subint-vrf.md  README.subint.simple.topo.md  README.telemetry.md  README.two-routers.md  README.vlan.bridging.topo.md  port_stats.md  test_2rules.json  vlan-bvi-hld.md  vxlan-evpn.md
platform/mkrules/src/sonic-sairedis/pyext/py3/: Makefile.am
platform/mkrules/src/sonic-sairedis/saidiscovery/: Makefile.am
platform/mkrules/src/sonic-sairedis/syncd/: Makefile.am
platform/mkrules/src/sonic-sairedis/syncd/scripts/: syncd_init_common.sh
platform/mkrules/src/sonic-sairedis/tests/: Makefile.am
platform/mkrules/src/sonic-sairedis/unittest/vslib/: Makefile.am
platform/saivpp/vpplib/: BitResourcePool.h  Buffer.h  ContextConfig.cpp  ContextConfig.h  ContextConfigContainer.cpp  CorePortIndexMap.cpp  CorePortIndexMap.h  CorePortIndexMapContainer.h  Event.cpp  Event.h  EventPayloadNetLinkMsg.cpp  EventPayloadNetLinkMsg.h  EventPayloadPacket.h  FdbInfo.cpp  LaneMap.h  LaneMapContainer.h  LaneMapFileParser.h  MACsecEgressFilter.h  MACsecForwarder.cpp  Makefile.am  RealObjectIdManager.h  ResourceLimiterParser.cpp  ResourceLimiterParser.h  Sai.cpp  Sai.h  SaiObjectDB.cpp  SaiObjectDB.h  Switch.h  SwitchBCM56971B0.h  SwitchBCM81724.h  SwitchConfig.h  SwitchConfigContainer.cpp  SwitchMLNX2700.cpp  SwitchMLNX2700.h  SwitchState.cpp  SwitchStateBase.cpp  SwitchStateBase.h  SwitchStateBaseAcl.cpp  SwitchStateBaseBfd.cpp  SwitchStateBaseFdb.cpp  (+78 more)
platform/saivpp/vpplib/vppxlate/: Makefile  SaiAclStats.c  SaiIntfStats.c  SaiIntfStats.h  SaiVppStats.c  SaiVppStats.h  SaiVppXlate.c  SaiVppXlate.h
rules/: docker-gbsyncd-vpp.mk  docker-ptf.mk  docker-sonic-vpp.dep  docker-sonic-vpp.mk  docker-syncd-vpp.mk  kvm-image.mk  libsaithrift-dev.dep  one-image.mk  onie.mk  platform-modules-vpp.dep  raw-image.dep  raw-image.mk  saivpp.dep  saivpp.mk  syncd-vpp.dep  syncd-vpp.mk  vpp.dep  vpp.mk  vppcfgd.mk
saivpp/: EventPayloadNotification.h  FdbInfo.h  HostInterfaceInfo.cpp  LaneMap.cpp  MACsecIngressFilter.h  Makefile.am  RealObjectIdManager.cpp  SaiFdbAging.cpp  SwitchBCM56850.cpp  SwitchStateBaseMACsec.cpp  SwitchStateBaseNbr.cpp  VirtualSwitchSaiInterface.h  VirtualSwitchSaiInterfacePort.cpp  configure.ac
saivpp/debian/: changelog  control  libsaivpp-dev.install  libsaivpp-dev.links  libsaivpp.install  rules
saivpp/src/: BitResourcePool.h  Buffer.cpp  Context.cpp  Context.h  ContextConfigContainer.h  CorePortIndexMapContainer.cpp  CorePortIndexMapFileParser.cpp  CorePortIndexMapFileParser.h  EventPayloadNotification.cpp  EventPayloadPacket.cpp  EventQueue.cpp  EventQueue.h  FdbInfo.cpp  HostInterfaceInfo.cpp  HostInterfaceInfo.h  IpVrfInfo.h  LaneMapContainer.cpp  LaneMapFileParser.cpp  MACsecAttr.cpp  MACsecAttr.h  MACsecFilter.cpp  MACsecFilter.h  MACsecFilterStateGuard.cpp  MACsecFilterStateGuard.h  MACsecForwarder.h  MACsecIngressFilter.cpp  MACsecManager.cpp  MACsecManager.h  Makefile.am  NetMsgRegistrar.cpp  README.md  RealObjectIdManager.cpp  ResourceLimiter.cpp  ResourceLimiter.h  ResourceLimiterContainer.cpp  ResourceLimiterContainer.h  Sai.cpp  Sai.h  SaiAttrWrap.cpp  SaiAttrWrap.h  (+45 more)
saivpp/src/vppxlate/: Makefile  SaiAclStats.c  SaiAclStats.h  SaiIntfStats.c  SaiVppStats.c  SaiVppXlate.c  SaiVppXlate.h
saivpp/vpplib/: EventPayload.h  EventPayloadNotification.h  MACsecEgressFilter.cpp  Makefile.am  NetMsgRegistrar.h  ResourceLimiter.cpp  ResourceLimiterParser.cpp  Sai.h  SaiAttrWrap.cpp  SaiObjectDB.cpp  SaiUnittests.cpp  SwitchBCM56971B0.cpp  SwitchBCM81724.cpp  SwitchContainer.cpp  SwitchState.cpp  SwitchState.h  SwitchStateBase.cpp  SwitchStateBaseAcl.cpp  SwitchStateBaseNbr.cpp  SwitchStateBaseNexthop.cpp  SwitchStateBaseRoute.cpp  VirtualSwitchSaiInterfacePort.cpp  saivpp.h
saivpp/vpplib/vppxlate/: Makefile
saivpp/vppxlate/: SaiVppStats.h
scripts/: telemetry_cert.gen.sh
sonic-version/: Makefile  sonic_version.yml.j2
sonic-vppcfgd/: .gitignore  setup.cfg
tests/: README.md  inventory-t0t1.j2  inventory-vm-vxlan.j2  inventory-vm.j2  inventory.j2  sonic-sw-dp-bring-down.yaml  sonic-sw-dp-bring-up.yaml  sonic-sw-dp-vlan-bring-down.yaml  sonic-sw-dp-vlan-bring-up.yaml  sonic-vpp-t0t1-topology.yaml  sonic-vpp-vm-bring-up.yaml  sonic-vpp-vm-vxlan-bring-up.yaml  validate-sonic-vpp-docker-routing.py  validate-sonic-vpp-t0t1-topology.py  validate-sonic-vpp-vm-routing.py  validate-sonic-vpp-vm-vxlan-routing.py
vppbld/: Makefile  README.md  vpp.patch  vpp_version
(+287 files in other folders)
